# advent_of_code

./: .gitignore
2020/: 1.cc  10.cc  11.cc  12.cc  13.cc  14.cc  15.cc  16.cc  17.cc  18.cc  19.cc  2.cc  20.cc  21.cc  22.cc  23.cc  24.cc  25.cc  3.cc  4.cc  5.cc  6.cc  7.cc  8.cc  9.cc  CMakeLists.txt  lib.h
2021/: CMakeLists.txt
2021/1/: main.cc
2021/10/: main.cc
2021/11/: main.cc
2021/12/: main.cc
2021/13/: main.cc
2021/14/: input.txt  main.cc
2021/15/: main.cc
2021/16/: main.cc
2021/17/: input.txt  main.cc
2021/18/: main.cc
2021/19/: main.cc  test2.txt
2021/2/: main.cc
2021/20/: input.txt  main.cc
2021/21/: main.cc
2021/22/: main.cc
2021/23/: main.cc
2021/24/: input_annotated.txt  input_changes.txt  input_simplified.txt  main.cc  partial_assignment.txt
2021/25/: main.cc
2021/3/: main.cc
2021/4/: main.cc
2021/5/: main.cc
2021/6/: main.cc
2021/7/: main.cc
2021/8/: main.cc
2021/9/: main.cc
2021/include/: aoclib.hpp
2023/: Cargo.toml  init.sh
2023/src/: day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  template.rs
