cmake_minimum_required(VERSION 3.17)
project(advent_of_code)

set(CMAKE_CXX_STANDARD 17)

add_executable(1 1.cc)
add_executable(2 2.cc)
add_executable(3 3.cc)
add_executable(4 4.cc)
add_executable(5 5.cc)
add_executable(6 6.cc)
add_executable(10 10.cc)
add_executable(14 14.cc)
add_executable(15 15.cc)
add_executable(16 16.cc)
add_executable(17 17.cc)
add_executable(18 18.cc)
add_executable(19 19.cc)
add_executable(20 20.cc)
add_executable(21 21.cc)
add_executable(22 22.cc)
add_executable(23 23.cc)
add_executable(24 24.cc)
add_executable(25 25.cc)

