[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.0.0"
regex = "1.10.2"
enum-map = "2.7.3"

[[bin]]
name = "day02"
path = "src/day02.rs"

[[bin]]
name = "day03"
path = "src/day03.rs"

[[bin]]
name = "day04"
path = "src/day04.rs"

[[bin]]
name = "day05"
path = "src/day05.rs"


[[bin]]
name = "day06"
path = "src/day06.rs"


[[bin]]
name = "day07"
path = "src/day07.rs"


[[bin]]
name = "day08"
path = "src/day08.rs"

